--- a/Give/Base.lproj/Main.storyboard
+++ b/Give/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Give" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,60 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K9N-IM-rTQ">
+                                <rect key="frame" x="16" y="20" width="130" height="30"/>
+                                <state key="normal" title="Share to Facebook">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="shareToFacebook:" destination="BYZ-38-t0r" eventType="touchUpInside" id="n0g-ub-Lf5"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="alD-Mb-LCW">
+                                <rect key="frame" x="16" y="58" width="108" height="30"/>
+                                <state key="normal" title="Share to Twitter">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="shareToTwitter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="A4X-bm-VlG"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uk1-xF-4oC">
+                                <rect key="frame" x="16" y="96" width="117" height="30"/>
+                                <state key="normal" title="Share from Email">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendFromEmail:" destination="BYZ-38-t0r" eventType="touchUpInside" id="f1r-Xx-62C"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="byj-gr-HFs">
+                                <rect key="frame" x="16" y="134" width="174" height="30"/>
+                                <state key="normal" title="Share from Text Message">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendFromTextMessage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JXP-Kj-tZi"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="K9N-IM-rTQ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="3Rm-Bu-FMp"/>
+                            <constraint firstItem="alD-Mb-LCW" firstAttribute="top" secondItem="K9N-IM-rTQ" secondAttribute="bottom" constant="8" symbolic="YES" id="DkX-or-WNo"/>
+                            <constraint firstItem="alD-Mb-LCW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="KE1-wT-cqW"/>
+                            <constraint firstItem="uk1-xF-4oC" firstAttribute="leading" secondItem="alD-Mb-LCW" secondAttribute="leading" id="NCQ-Nv-P18"/>
+                            <constraint firstItem="K9N-IM-rTQ" firstAttribute="leading" secondItem="alD-Mb-LCW" secondAttribute="leading" id="OKe-uu-0ty"/>
+                            <constraint firstItem="byj-gr-HFs" firstAttribute="top" secondItem="uk1-xF-4oC" secondAttribute="bottom" constant="8" symbolic="YES" id="VUu-P6-CPc"/>
+                            <constraint firstItem="uk1-xF-4oC" firstAttribute="top" secondItem="alD-Mb-LCW" secondAttribute="bottom" constant="8" symbolic="YES" id="kkt-1s-kMj"/>
+                            <constraint firstItem="uk1-xF-4oC" firstAttribute="leading" secondItem="byj-gr-HFs" secondAttribute="leading" id="wsS-Bn-RO4"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="430" y="366"/>
         </scene>
     </scenes>
 </document>
