--- a/Give/Base.lproj/Main.storyboard
+++ b/Give/Base.lproj/Main.storyboard
@@ -17,53 +17,109 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K9N-IM-rTQ">
-                                <rect key="frame" x="16" y="20" width="130" height="30"/>
-                                <state key="normal" title="Share to Facebook">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="shareToFacebook:" destination="BYZ-38-t0r" eventType="touchUpInside" id="n0g-ub-Lf5"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="alD-Mb-LCW">
-                                <rect key="frame" x="16" y="58" width="108" height="30"/>
-                                <state key="normal" title="Share to Twitter">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="shareToTwitter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="A4X-bm-VlG"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uk1-xF-4oC">
-                                <rect key="frame" x="16" y="96" width="117" height="30"/>
-                                <state key="normal" title="Share from Email">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="sendFromEmail:" destination="BYZ-38-t0r" eventType="touchUpInside" id="f1r-Xx-62C"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="byj-gr-HFs">
-                                <rect key="frame" x="16" y="134" width="174" height="30"/>
-                                <state key="normal" title="Share from Text Message">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="sendFromTextMessage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JXP-Kj-tZi"/>
-                                </connections>
-                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yni-xg-nU2">
+                                <rect key="frame" x="0.0" y="504" width="600" height="63"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K9N-IM-rTQ">
+                                        <rect key="frame" x="8" y="0.0" width="130" height="30"/>
+                                        <state key="normal" title="Share to Facebook">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="shareToFacebook:" destination="BYZ-38-t0r" eventType="touchUpInside" id="n0g-ub-Lf5"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="alD-Mb-LCW">
+                                        <rect key="frame" x="8" y="33" width="108" height="30"/>
+                                        <state key="normal" title="Share to Twitter">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="shareToTwitter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="A4X-bm-VlG"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uk1-xF-4oC">
+                                        <rect key="frame" x="161" y="0.0" width="117" height="30"/>
+                                        <state key="normal" title="Share from Email">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="sendFromEmail:" destination="BYZ-38-t0r" eventType="touchUpInside" id="f1r-Xx-62C"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="byj-gr-HFs">
+                                        <rect key="frame" x="161" y="33" width="174" height="30"/>
+                                        <state key="normal" title="Share from Text Message">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="sendFromTextMessage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MND-fh-7ua"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="K9N-IM-rTQ" firstAttribute="top" secondItem="yni-xg-nU2" secondAttribute="top" id="Bph-dp-puU"/>
+                                    <constraint firstItem="alD-Mb-LCW" firstAttribute="top" secondItem="K9N-IM-rTQ" secondAttribute="bottom" constant="3" id="JPm-wf-qcT"/>
+                                    <constraint firstItem="byj-gr-HFs" firstAttribute="leading" secondItem="uk1-xF-4oC" secondAttribute="leading" id="OVr-ug-HvP"/>
+                                    <constraint firstItem="K9N-IM-rTQ" firstAttribute="leading" secondItem="yni-xg-nU2" secondAttribute="leadingMargin" id="VNa-QV-9vO"/>
+                                    <constraint firstItem="K9N-IM-rTQ" firstAttribute="baseline" secondItem="uk1-xF-4oC" secondAttribute="baseline" id="aIc-ty-i3W"/>
+                                    <constraint firstItem="K9N-IM-rTQ" firstAttribute="leading" secondItem="alD-Mb-LCW" secondAttribute="leading" id="bjm-Kg-oly"/>
+                                    <constraint firstItem="uk1-xF-4oC" firstAttribute="leading" secondItem="K9N-IM-rTQ" secondAttribute="trailing" constant="23" id="iH9-Vq-a8V"/>
+                                    <constraint firstItem="alD-Mb-LCW" firstAttribute="baseline" secondItem="byj-gr-HFs" secondAttribute="baseline" id="sAJ-Xx-N9j"/>
+                                    <constraint firstAttribute="bottom" secondItem="alD-Mb-LCW" secondAttribute="bottom" id="u1b-5D-qlj"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qTP-rj-uHf">
+                                <rect key="frame" x="0.0" y="445" width="600" height="51"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fHU-Bl-nV6">
+                                        <rect key="frame" x="8" y="11" width="69" height="30"/>
+                                        <state key="normal" title="Back Icon">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZgF-bP-Jeq">
+                                        <rect key="frame" x="257" y="11" width="87" height="30"/>
+                                        <state key="normal" title="Refresh Icon">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RZc-xV-DOS">
+                                        <rect key="frame" x="501" y="11" width="91" height="30"/>
+                                        <state key="normal" title="Forward Icon">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="fHU-Bl-nV6" firstAttribute="leading" secondItem="qTP-rj-uHf" secondAttribute="leadingMargin" id="4DL-wD-JbO"/>
+                                    <constraint firstItem="RZc-xV-DOS" firstAttribute="trailing" secondItem="qTP-rj-uHf" secondAttribute="trailingMargin" id="9P1-QT-O0A"/>
+                                    <constraint firstItem="RZc-xV-DOS" firstAttribute="baseline" secondItem="ZgF-bP-Jeq" secondAttribute="baseline" id="NyE-mw-ZOl"/>
+                                    <constraint firstItem="fHU-Bl-nV6" firstAttribute="baseline" secondItem="ZgF-bP-Jeq" secondAttribute="baseline" id="RV1-Ad-x7U"/>
+                                    <constraint firstItem="fHU-Bl-nV6" firstAttribute="top" secondItem="qTP-rj-uHf" secondAttribute="top" constant="11" id="eVL-Ra-yL5"/>
+                                    <constraint firstItem="ZgF-bP-Jeq" firstAttribute="centerX" secondItem="qTP-rj-uHf" secondAttribute="centerX" id="mDg-k0-cpS"/>
+                                    <constraint firstAttribute="bottom" secondItem="fHU-Bl-nV6" secondAttribute="bottom" constant="10" id="oWX-jG-5Vj"/>
+                                </constraints>
+                            </view>
+                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sz0-Hl-9c8">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="437"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="K9N-IM-rTQ" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="3Rm-Bu-FMp"/>
-                            <constraint firstItem="alD-Mb-LCW" firstAttribute="top" secondItem="K9N-IM-rTQ" secondAttribute="bottom" constant="8" symbolic="YES" id="DkX-or-WNo"/>
-                            <constraint firstItem="alD-Mb-LCW" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="KE1-wT-cqW"/>
-                            <constraint firstItem="uk1-xF-4oC" firstAttribute="leading" secondItem="alD-Mb-LCW" secondAttribute="leading" id="NCQ-Nv-P18"/>
-                            <constraint firstItem="K9N-IM-rTQ" firstAttribute="leading" secondItem="alD-Mb-LCW" secondAttribute="leading" id="OKe-uu-0ty"/>
-                            <constraint firstItem="byj-gr-HFs" firstAttribute="top" secondItem="uk1-xF-4oC" secondAttribute="bottom" constant="8" symbolic="YES" id="VUu-P6-CPc"/>
-                            <constraint firstItem="uk1-xF-4oC" firstAttribute="top" secondItem="alD-Mb-LCW" secondAttribute="bottom" constant="8" symbolic="YES" id="kkt-1s-kMj"/>
-                            <constraint firstItem="uk1-xF-4oC" firstAttribute="leading" secondItem="byj-gr-HFs" secondAttribute="leading" id="wsS-Bn-RO4"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="yni-xg-nU2" secondAttribute="bottom" constant="33" id="6eZ-Jy-APh"/>
+                            <constraint firstItem="qTP-rj-uHf" firstAttribute="trailing" secondItem="Sz0-Hl-9c8" secondAttribute="trailing" id="BJM-wj-i1A"/>
+                            <constraint firstItem="yni-xg-nU2" firstAttribute="leading" secondItem="qTP-rj-uHf" secondAttribute="leading" id="NCI-LH-gki"/>
+                            <constraint firstItem="yni-xg-nU2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Qjf-62-vnK"/>
+                            <constraint firstItem="yni-xg-nU2" firstAttribute="top" secondItem="qTP-rj-uHf" secondAttribute="bottom" constant="8" symbolic="YES" id="W4F-ro-6Fn"/>
+                            <constraint firstItem="Sz0-Hl-9c8" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="gfx-xN-bRE"/>
+                            <constraint firstItem="qTP-rj-uHf" firstAttribute="trailing" secondItem="yni-xg-nU2" secondAttribute="trailing" id="s15-Zf-3pi"/>
+                            <constraint firstItem="qTP-rj-uHf" firstAttribute="top" secondItem="Sz0-Hl-9c8" secondAttribute="bottom" constant="8" symbolic="YES" id="tKx-R3-O0W"/>
+                            <constraint firstItem="Sz0-Hl-9c8" firstAttribute="leading" secondItem="qTP-rj-uHf" secondAttribute="leading" id="uik-WQ-3mq"/>
+                            <constraint firstAttribute="trailing" secondItem="Sz0-Hl-9c8" secondAttribute="trailing" id="y6R-5f-Bx7"/>
                         </constraints>
                     </view>
                 </viewController>
