--- a/Give/Base.lproj/Main.storyboard
+++ b/Give/Base.lproj/Main.storyboard
@@ -34,9 +34,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fcI-Mc-TAC">
-                                <rect key="frame" x="80" y="116" width="111" height="30"/>
-                                <state key="normal" title="Facebook Login">
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fcI-Mc-TAC">
+                                <rect key="frame" x="45" y="468" width="231" height="48"/>
+                                <state key="normal" title="Facebook Login" image="fblogin.png">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
@@ -191,4 +191,7 @@
             <point key="canvasLocation" x="1097" y="1096"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="fblogin.png" width="416" height="101"/>
+    </resources>
 </document>
